# image_manipulation

./: .gitignore  LICENSE  LICENSE-human.txt  Makefile  README.md  annotate.rb  annotate.sh  mkpics.pl  mksub.bash  mktitle.bash  pyproject.toml  resize.pl
.github/workflows/: ci.yml
annotate/: README.md  annotate.rb
src/image_manipulation/: annotate.py  mkpics.py  resize.py  showth.py  tmpl.html  utils.py
tests/: test_annotate.py  test_mkpics.py  test_pass.py  test_showth.py  test_utils.py
tests/resize/: test_fix_ratio.py  test_process_image.py  test_resize.py  test_resize_args.py
